--- a/src/main/resources/templates/buildStatusBasic.vm
+++ b/src/main/resources/templates/buildStatusBasic.vm
@@ -8,7 +8,7 @@
     void setup()
     {
     size(120, 19);
-    background(#FFFFFF);
+    background(0,0);
     stroke(#424242);
     fill(#424242);
     rect(0, 3, 79, 15, 5, 0, 0, 5);
